# python-stopwatch

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
stopwatch/: __init__.py  logger.py  markup.py  statistics.py  stopwatch.py  utils.py
stopwatch/contextmanagers/: __init__.py  profile.py  stopwatch.py
