[metadata]
name = python-stopwatch
version = attr: stopwatch.__version__
description = A simple stopwatch for measuring code performance
author = Jonghwan Hyeon
author_email = jonghwanhyeon93@gmail.com
url = https://github.com/jonghwanhyeon/python-stopwatch
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    stopwatch
    profile
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    python-tml
    typing_extensions
python_requires = >=3.7
packages = find: